# ladybug

./: README.md
Docs/: diffuse-shading.md  papaers.md
Docs/Computer Graphics (MIT)/: Readme.txt
Docs/Computer Graphics (MIT)/Edge-Function/: Readme.txt
Docs/Computer Graphics (MIT)/Graphics Pipeline & Rasterization/: Readme.txt
Ladybug/: .gitignore  CMakeLists.txt  README.md
Ladybug/Ladybug/: Bitmap.cpp  Camera.cpp  Camera.h  Color.cpp  Color.h  Component.cpp  Component.h  DirectionalLight.cpp  DirectionalLight.h  GameObject.cpp  GameObject.h  Ladybug.vcxproj  Ladybug.vcxproj.filters  Light.cpp  Light.h  Main.cpp  Material.h  Mathf.h  Matrix4x4.cpp  Matrix4x4.h  Mesh.cpp  Mesh.h  ObjLoader.cpp  ObjLoader.h  Pipeline.cpp  Pipeline.h  Raster.cpp  Raster.h  Rasterizer.cpp  Rasterizer.h  Ray.cpp  Ray.h  Raytracing.cpp  ShadowMap.cpp  ShadowMap.h  Test.cpp  Test.h  Transform.h  Vector3.cpp  Vector3.h  (+2 more)
Ladybug/include/: Bitmap.h  Color.h  GameObject.h  Material.h  Mathf.h  ObjLoader.h  Ray.h  Raytracing.h
Ladybug/src/: GameObject.cpp  Light.cpp  Main.cpp  ObjLoader.cpp  Ray.cpp  ShadowMap.cpp  Vector2.cpp  Vector3.cpp
Ladybug_old/: Ladybug.sln
Ladybug_old/Ladybug/: Bitmap.cpp  Color.cpp  Color32.cpp  Color32.h  Ladybug.vcxproj  Mathf.cpp  Matrix4x4.h  ObjLoader.cpp  Pipeline.cpp  Rasterizer.cpp  Rasterizer.h  SVG.cpp  SVG.h  Screen.cpp  Screen.h  ShadowMap.h  Test.h  Transform.cpp  Vector2.h  Vector4.cpp  Vector4.h  World.cpp  World.h
Ladybug_unity/ProjectSettings/: ProjectSettings.asset  QualitySettings.asset
Unity_builtin_shaders/: .gitignore
(+35 files in other folders)
